----- StarLib Changelog -----
8/29/2012, Stan
- Made the simapp drawing occur only when logic thread is asleep to prevent having to worry about concurrent modification exceptions
- added MAX_FPS variable to SimSettings, which you can adjust if drawing is blocking for too long
- updates to deere_fardin simapp

8/28/2012, Stan
- Adjusted Project Build Properties to remove unnecessary dependencies
- Removed 3 SimApps due to external dependence on ojalgo (if you want to readd them make a seperate project not integrated in the simulator please!). Removed LucasApp1.java, NewApp.java, and RoughTravelApp.java
- Fixed capitalization for Common.java, ItemPosition.java, PositionList.java
- Added support for explicit blocking of the wireless for various robots in the simulator
- Added variable velocity support in IdealSimGpsProvider
- Added support for the simulation programs to accept mouse input in the simulator when the user right clicks (AcceptsMouseInput.java)
- Added support for the simapps to be able to draw things (such as debug information) directly on the simulator (Drawer.java)
- Changed trace of robot positions to be a line instead of drawing the entire robot
- Fixed drawing letters on the simlator so they don't appear upside down
- Added detection and printing of runtime exceptions in simapp code rather than having them silently be ignored while waiting for all simapp threads to exit
- Added deere_fardin and stan packages in simapps as well as the corresponding apps


5/22/2012, Taylor
- Added relative path support for input and output files
- Fixed some bugs preventing collision avoidance from working in FlockingTestTwo

5/11/2012, Taylor
- Added GlobalLogger.java: quick hack to get a "global truth" timeline; seems basically correct as far as positions go, but local times of robots may be wrong (not sure if I'm using the right time variable)
- Added batch simulations runs on the number of robots, and directory handling to keep traces; see Main.java in StarlSim
